<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.RequirePermissionFragment">

    <TextView
        android:id="@+id/tv_permission_1"
        style="@style/font_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_location_permission"
        android:textColor="@color/white"
        android:letterSpacing="0.08"
        android:textSize="28sp"
        android:layout_marginTop="117dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_permission_2"
        style="@style/font_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_location_permission_note_1"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:letterSpacing="0.1"
        android:layout_marginTop="113dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_permission_1"/>

    <TextView
        android:id="@+id/tv_permission_3"
        style="@style/font_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_location_permission_note_2"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:letterSpacing="0.08"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_permission_2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_confirm"
        style="@style/font_500"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:background="@drawable/bg_state_confirm_bt"
        android:textSize="24sp"
        android:letterSpacing="0.15"
        android:layout_marginBottom="132dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_permission_4"
        style="@style/font_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree_location_permission"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:letterSpacing="0.08"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_confirm"/>

</androidx.constraintlayout.widget.ConstraintLayout>