<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_background"
    tools:context=".ui.tab.favorite.FavoriteFragment">

    <LinearLayout
        android:id="@+id/ll_fav_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="56dp"
        android:layout_marginTop="31dp">

        <CheckedTextView
            android:id="@+id/tv_coupon"
            style="@style/Widget.App.FavoriteTabStyle"
            android:text="@string/coupon" />

        <CheckedTextView
            android:id="@+id/tv_store"
            style="@style/Widget.App.FavoriteTabStyle"
            android:text="@string/store"
            android:layout_marginStart="30dp"/>

        <CheckedTextView
            android:id="@+id/tv_attraction"
            style="@style/Widget.App.FavoriteTabStyle"
            android:text="@string/attraction"
            android:layout_marginStart="30dp"/>

        <CheckedTextView
            android:id="@+id/tv_travel"
            style="@style/Widget.App.FavoriteTabStyle"
            android:text="@string/travel"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_fav_tab"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="16dp"/>

    <FrameLayout
        android:id="@+id/fl_fav_full_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>