<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/cl_root"
    tools:context=".ui.login.LoginActivity">

    <TextView
        style="@style/font_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_login_register"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:letterSpacing="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="83dp"/>

    <View
        android:id="@+id/view_sub_bg"
        android:layout_width="900dp"
        android:layout_height="408dp"
        android:background="@drawable/bg_round_6d6e71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_qr_code"
        android:layout_width="304dp"
        android:layout_height="304dp"
        tools:src="@drawable/ic_qr_code"
        app:layout_constraintTop_toTopOf="@id/view_sub_bg"
        app:layout_constraintStart_toStartOf="@id/view_sub_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_sub_bg"
        android:layout_marginStart="46dp"/>

    <View
        android:id="@+id/view_divider"
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:background="#BCBEC0"
        app:layout_constraintTop_toTopOf="@id/view_sub_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_sub_bg"
        app:layout_constraintStart_toEndOf="@id/iv_qr_code"
        android:layout_marginStart="40dp"/>

    <ImageView
        android:id="@+id/iv_phone"
        android:layout_width="100dp"
        android:layout_height="168dp"
        android:src="@drawable/ic_smart_phone"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/view_sub_bg"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="40dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="67dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="33dp"
        app:layout_constraintStart_toEndOf="@id/view_divider"
        app:layout_constraintEnd_toEndOf="@id/view_sub_bg"
        app:layout_constraintTop_toTopOf="@id/view_sub_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_sub_bg">

        <TextView
            style="@style/font_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_step_note"
            android:letterSpacing="0.08"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <TextView
            style="@style/font_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_step_1"
            android:textSize="24sp"
            android:letterSpacing="0.08"
            android:layout_marginTop="18dp"
            android:textColor="@color/white"/>

        <TextView
            style="@style/font_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_step_2"
            android:textSize="24sp"
            android:letterSpacing="0.08"
            android:layout_marginTop="18dp"
            android:textColor="@color/white"/>

        <TextView
            style="@style/font_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_step_3"
            android:textSize="24sp"
            android:letterSpacing="0.08"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_no_login"
        style="@style/font_500"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_round_ffffff"
        android:text="@string/not_login"
        android:letterSpacing="0.15"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="84dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        style="@style/font_400"
        android:textSize="24sp"
        android:letterSpacing="0.08"
        app:layout_constraintStart_toStartOf="@id/bt_no_login"
        app:layout_constraintEnd_toEndOf="@id/bt_no_login"
        app:layout_constraintTop_toBottomOf="@id/bt_no_login"
        android:text="@string/use_some_function"
        android:layout_marginTop="14dp"/>

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/fl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#4D000000"
        android:elevation="4dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/color_highlight"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>