<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="285dp"
    android:layout_height="136dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_round_30_color_on_background"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_by_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="27dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_by_area"
            style="@style/font_500"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:letterSpacing="0.08"
            android:text="@string/by_area"
            android:textColor="@color/color_primary"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/iv_by_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_top_memu_select"
            android:visibility="invisible" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_by_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="27dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_by_location"
            style="@style/font_500"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:letterSpacing="0.08"
            android:text="@string/by_location"
            android:textColor="@color/color_primary"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/iv_by_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_top_memu_select"
            android:visibility="invisible" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_by_dest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="27dp"
        android:layout_weight="1"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/by_dest"
            android:textColor="@color/color_primary"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/iv_by_dest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_top_memu_select"
            android:visibility="invisible" />

    </FrameLayout>

</LinearLayout>